hadi's edits - lol i hope not to break any

--- a/lang/en.json
+++ b/lang/en.json
@@ -138,7 +138,7 @@
     "Edit label": "Edit label",
     "Edit product": "Edit product",
     "Edit ticket #:id": "Edit ticket #:id",
-    "Email": "Email",
+    "Email": "Your Email",
     "Email Password Reset Link": "Email Password Reset Link",
     "Email address": "Email address",
     "Enable": "Enable",
@@ -369,7 +369,8 @@
     "Settings": "Settings",
     "Setup Complete": "Setup Complete",
     "Sign in": "Sign in",
-    "Sign in to your account": "Sign in to your account",
+    "Next": "Next",
+    "Sign in to your account": "Login in to your account",
     "Sign in with": "Sign in with",
     "Sign in with Envato": "Sign in with Envato",
     "Sign out": "Sign out",
